--- a/PHP/userform_login.html
+++ b/PHP/userform_login.html
@@ -26,9 +26,9 @@
         
         </div>
         <div class="social-icons">
-            <img src="IMAGES/fb.png">
-            <img src="IMAGES/tw.png">
-            <img src="IMAGES/gp.png">
+            <img src="fb.png">
+            <img src="tw.png">
+            <img src="gp.png">
         </div>
 
         <div class="form_wrapper">
