--- a/experience.html
+++ b/experience.html
@@ -80,11 +80,11 @@
           <div class="direction-l">
             <div class="flag-wrapper">
               <span class="hexa"></span>
-              <span class="flag">Project Coordinator</span>
+              <span class="flag">Alliance Project Coordinator</span>
               <span class="time-wrapper"><span class="time">2014-2015</span></span>
             </div>
             <span>Alliance Clinical Trials, Boston, MA, USA</span>
-            <div class="desc">This role involved working closely with the Operations team to smoothly execute events, meetings, and administration duties in the Healthcare industry.</div>
+            <div class="desc">I worked closely with the Operations team to smoothly execute events, meetings, and administration duties in the Healthcare industry.</div>
           </div>
         </li>
 
@@ -105,10 +105,10 @@
           <div class="direction-l">
             <div class="flag-wrapper">
               <span class="hexa"></span>
-              <span class="flag">B.A. Communications / French (Cum Laude)</span>
+              <span class="flag">B.A. Communications / French</span>
               <span class="time-wrapper"><span class="time">2009-2013</span></span>
             </div>
-            <span>University of Hawaii at Manoa</span>
+            <span>University of Hawaii at Manoa (Cum Laude)</span>
           </div>
         </li>
       </ul>
