--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </div>
 
             <div class="row" style="margin-top:7%">
-              <h5 style="color:black; margin-bottom:-5%;"><u>Here are some languages I've dabbled in</h5></u>
+              <h5 style="color:black;"><u>Here are some languages I've dabbled in</h5></u>
               <div class="col s6">
                 <ul class="ul-frontend">
                     <li>Python</li>
