--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <h5>Creativity Time!</h5>
               <p>A project from my Communications career</p>
             </div>
-            <div class="card-action center-align"><a style="color:teal;" href="https://www.youtube.com/watch?v=EoNu2ZhrNiQ" target="_blank">Take a peek</a></div>
+            <div class="card-action center-align"><a style="color:teal;" href="https://www.youtube.com/watch?v=EoNu2ZhrNiQ" target="_blank">Enjoy this clip</a></div>
         </div>
       </div>
     
