--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </div>
 
       <div class="col s3 pull-s9">
-        <img src="https://i.pinimg.com/originals/86/ef/f9/86eff988922f15e294bd794eb949aba5.jpg" alt="Avatar">
+        <img src="linkedin_pic.jpg" alt="Avatar">
         <p>(This is me)</p>
       </div>
     <!--End of row & container section-->   
