--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   
   <head>
     <meta charset="UTF-8"/>
-    <title>Patricia Carr</title>
-    
+    <title>Patricia Carr: welcome to my site!</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet"> 
