--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8"/>
     <title>Patricia Carr</title>
     
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet"> 
