--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
 
       <div class="col s3 pull-s9">
-        <img src="linkedin_pic.jpg" alt="Avatar">
+        <img src="linkedin_pic.jfif" alt="Avatar">
         <p>(This is me)</p>
       </div>
     <!--End of row & container section-->   
