--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                   <li>C</li>
                   <li>PHP</li>
                   <li>MySQL (MariaDB)</li>
-                  <li>Symfony (MVC Framework)</li>
                 </ul>
+                Symfony (MVC Framework)
               </div>
             </div>
         </div>
