--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <li>MySQL (MariaDB)</li>
                 </ul>
               </div>
-              Symfony (MVC Framework)
+              <span class="symfony">Symfony (MVC Framework)</span>
             </div>
         </div>
 
