--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
                   <li>MySQL (MariaDB)</li>
                 </ul>
               </div>
-              <span class="symfony">Symfony (MVC Framework)</span>
+              <ul class="symfony">
+                <li>Symfony (MVC Framework)</li>
+              </ul>
             </div>
         </div>
 
