--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="col s12">
             <img src="linkedin_pic.jfif" alt="Avatar">
           </div>
-          <span>Download CV <a href="CV_Patricia_Carr.pdf" style="color:teal;" download>here</a></span>
+          <span>Download CV ---><a href="CV_Patricia_Carr.pdf" style="color:teal;" download>here</a></span>
         </div>
       </div>
     <!--End of row & container section-->   
