--- a/experience.html
+++ b/experience.html
@@ -58,7 +58,7 @@
             <div class="desc">Languages used:<br>
               C, MySQL, PHP, HTML5 & CSS3/SCSS/Materialize CSS, JavaScript, jQuery, <br>
               MVC Frameworks (Symfony)<br>
-              Coming soon: <b>AngularJS</b> and Python.</div>
+              Coming soon: <b>AngularJS</b> and Django/Flask.</div>
           </div>
         </li>
       
