--- a/PHP/userform_login.html
+++ b/PHP/userform_login.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <!--include??<meta http-equiv="Content-type" content="text/html">-->
-    <title>qWWWerty</title>
+    <title>Login</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css_v2.css"  media="screen,projection"/>
@@ -26,9 +25,9 @@
         
         </div>
         <div class="social-icons">
-            <img src="fb.png">
-            <img src="tw.png">
-            <img src="gp.png">
+            <img src="IMAGES/fb.png">
+            <img src="IMAGES/tw.png">
+            <img src="IMAGES/gp.png">
         </div>
 
         <div class="form_wrapper">
@@ -37,7 +36,8 @@
             <input type="text" class="input-field" name="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" placeholder="email" required><br>
             <label name="password">Password</label>
             <input type="password" class="input-field" name="password" placeholder="password"><br>
-            <button type="submit" class="submit-btn">Register</button>
+            <button type="submit" class="submit-btn">Login</button>
+            <p style="font-size:.8em; color:red">Note: The database was hosted on a local server so it will not work when you click on Login :)</p>
         </form>
 
         </div>
