--- a/PHP/userform_login.html
+++ b/PHP/userform_login.html
@@ -25,9 +25,9 @@
         
         </div>
         <div class="social-icons">
-            <img src="IMAGES/fb.png">
-            <img src="IMAGES/tw.png">
-            <img src="IMAGES/gp.png">
+            <img src="fb.png">
+            <img src="tw.png">
+            <img src="gp.png">
         </div>
 
         <div class="form_wrapper">
@@ -37,7 +37,8 @@
             <label name="password">Password</label>
             <input type="password" class="input-field" name="password" placeholder="password"><br>
             <button type="submit" class="submit-btn">Login</button>
-            <p style="font-size:.8em; color:red">Note: The database was hosted on a local server so it will not work when you click on Login :)</p>
+            <p style="font-size:.8em; color:red">Note: The database was hosted on a local server so it will not work when you click on the Login button :)<br>
+            Feel free to check out the code though! (link on homepage)</p>
         </form>
 
         </div>
