--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
       <div class="col s6">
         <div class="row" style="margin-top:10%;">
           <div class="col s12">
-            <img src="linkedin_pic.jfif" alt="Avatar">
+            <img src="patty_abouttme.jpg" alt="Avatar">
           </div>
-          <span>Download CV ---><a href="Patricia Carr_CV.pdf" style="color:teal;" download>here</a></span>
+          <span>Download CV ---><a href="Patricia Carr_CV.pdf" style="color:teal;" download>[here]</a></span>
         </div>
       </div>
     <!--End of row & container section-->   
