--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="about-me">
           <h4>Hi there, <b>I'm Patricia</b>.</h4>
           </div>
-          <h6>An ambitious computer science student who's on the lookout for an <b style="color:teal;">internship</b> opportunity in the <b style="color:teal;">Front-End</b> or <b style="color:teal;">UX Research</b> field.
+          <h6>An ambitious computer science student who's on the lookout for an <b style="color:teal;">internship</b> opportunity in the <b style="color:teal;">Front-End</b> or <b style="color:teal;">UX Research</b> field.<br>
           To me, client satisfaction is high priority and I'm determined enough to find the right technology & methods to keep them hooked!</h6>
           <div class="row" style="margin-top:5%;">
             <div class="col s12">
