--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="col s6">
         <div class="row" style="margin-top:10%;">
           <div class="col s12">
-            <img src="patty_abouttme.jpg" alt="Avatar">
+            <img src="patty_2.jpg" alt="Avatar">
           </div>
           <span>Download CV ---> <a href="Patricia Carr_CV.pdf" style="color:teal;" download>[here]</a></span>
         </div>
