--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="col s12">
             <img src="patty_2.jpg" alt="Avatar">
           </div>
-          <span>Download CV ---> <a href="Patricia Carr_CV.pdf" style="color:teal;" download>[here]</a></span>
+          <p>Download CV ---> <a href="Patricia Carr_CV.pdf" style="color:teal;" download>[here]</a></p>
         </div>
       </div>
     <!--End of row & container section-->   
