--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="col s12">
             <img src="patty_2.jpg" alt="Avatar">
           </div>
-          <p>Download CV ---> <a href="Patricia Carr_CV.pdf" style="color:teal; border: 1px solid opacity:70% grey; border-radius:4%;" download>[here]</a></p>
+          <p>Download CV ---> <a href="Patricia Carr_CV.pdf" style="color:teal; margin-left:-5%;" download>[here]</a></p>
         </div>
       </div>
     <!--End of row & container section-->   
