--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="col s12">
             <img src="patty_2.jpg" alt="Avatar">
           </div>
-          <p>Download CV ---> <a href="Patricia Carr_CV.pdf" style="color:teal; margin-left:-7%;" download>[here]</a></p>
+          <p><h6><b>Download CV ---> <a href="Patricia Carr_CV.pdf" style="color:teal; margin-left:-7%;" download>[here]</a></b></h6></p>
         </div>
       </div>
     <!--End of row & container section-->   
