--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="about-me">
           <h4>Hi there, <b>I'm Patricia</b>.</h4>
           </div>
-          <h6>An ambitious computer science student who's on the lookout for an <b style="color:teal;">internship</b> opportunity in the <b style="color:teal;">Front-End Development</b> or <b style="color:teal;">UX Research</b> field.</h6>
+          <h6>An ambitious computer science student who's on the lookout for an <b style="color:teal;">internship</b> opportunity in the <b style="color:teal;">Front-End Development</b> or <b style="color:teal;">UX Research</b> field. (Of course I'm also open to Full Stack)</h6>
           <p></p>
           <h6>To me, client satisfaction is high priority and I'm determined enough to find the right technology & methods to keep them hooked!</h6>
           <div class="row" style="margin-top:5%;">
