--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="about-me">
           <h4>Hi there, <b>I'm Patricia</b>.</h4>
           </div>
-          <h6>An ambitious computer science student who's on the lookout for an <b style="color:teal;">internship</b> opportunity in the <b style="color:teal;">Front-End Development</b> or <b style="color:teal;">UX Research</b> field. (Of course I'm also open to Full Stack)</h6>
+          <h6>An ambitious [former] computer science student who's on the lookout for an opportunity in the <b style="color:teal;">Front-End Development</b> or <b style="color:teal;">UX Research</b> field.</h6>
           <p></p>
           <h6>To me, client satisfaction is high priority and I'm determined enough to find the right technology & methods to keep them hooked!</h6>
           <div class="row" style="margin-top:5%;">
@@ -87,10 +87,10 @@
                 </div>
                 <span class="arrow material-icons">arrow_forward</span>
 
-                <div class="tooltip">
+                <!--<div class="tooltip">
                   <span class="icon material-icons">school</span>
                   <span class="tooltiptext">Today: studying at EPITECH</span>
-                </div>
+                </div>-->
               </ul>
             </div>
           </div>
@@ -101,7 +101,7 @@
                 <ul class="ul-frontend">
                     <li>Python</li>
                     <li>HTML5/CSS3</li>
-                    <li>jQuery / JavaScript</li>
+                    <li>Angular 8/9</li>
                   </ul>
               </div>
               
@@ -109,7 +109,7 @@
                 <ul class="ul-backend">
                   <li>C</li>
                   <li>PHP</li>
-                  <li>MySQL (MariaDB)</li>
+                  <li>NodeJS</li>
                 </ul>
               </div>
                 <span class="symfony">Symfony (MVC Framework)</span>
