--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
                 <div class="tooltip">
                   <span class="icon material-icons">transfer_within_a_station</span>
-                  <span class="tooltiptext">2019: Career change in tech industry!</span>
+                  <span class="tooltiptext">2019/2020: Career change in tech industry!</span>
                 </div>
-                <span class="arrow material-icons">arrow_forward</span>
+            
 
                 <!--<div class="tooltip">
                   <span class="icon material-icons">school</span>
