--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
         <div class="card hoverable small">
             <div class="card-content">
               <i class="material-icons large">perm_data_setting</i>
-              <h5>PHP Login/Registration</h5>
-                 <p>It's the Code that matters: </p>Github files<a class="git-link" href="https://github.com/pcarrhi/PHP_db_connect" target="_blank">here</a>
+              <h5>My Music App</h5>
+                 <p>Angular + Firebase Back End. Still Work In Progress :) </p>Github files<a class="git-link" href="https://github.com/pcarrhi/MusicApp" target="_blank">here</a>
             </div>
             <div class="card-action center-align"><a style="color:teal;" href="https://pcarrhi.github.io/PHP/userform_register.html" target="_blank">Have a glance</a></div>
         </div>
