--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
               <div class="col s6">
                 <ul class="ul-frontend">
                     <li>Python</li>
-                    <li>HTML5/CSS3, Styled Components</li>
+                    <li>HTML5/CSS3</li>
+                  <li>Styled Components</li>
+                    <li>Angular 8/9</li>
                     <li>Angular 8/9</li>
                   </ul>
               </div>
