--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <h5>My Music App</h5>
                  <p>Angular + Firebase Back End. Still Work In Progress :) </p>Github files<a class="git-link" href="https://github.com/pcarrhi/MusicApp" target="_blank">here</a>
             </div>
-            <div class="card-action center-align"><a style="color:teal;" href="https://pcarrhi.github.io/PHP/userform_register.html" target="_blank">Have a glance</a></div>
+            <div class="card-action center-align"><a style="color:teal;" href="https://pcarrhi.github.io/MusicApp/src/index.html" target="_blank">Have a glance</a></div>
         </div>
       </div>
   
