--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
             <div class="card-content">
               <i class="material-icons large">perm_data_setting</i>
               <h5>My Music App</h5>
-                 <p>Angular + Firebase Back End. Still Work In Progress :) </p>Github files<a class="git-link" href="https://github.com/pcarrhi/MusicApp" target="_blank">here</a>
+                 <p>Angular + Firebase Back End. Still Work In Progress :)
             </div>
-            <div class="card-action center-align"><a style="color:teal;" href="https://pcarrhi.github.io/MusicApp/src/index.html" target="_blank">Have a glance</a></div>
+            <div class="card-action center-align"><a style="color:teal;" href="https://github.com/pcarrhi/MusicApp" target="_blank">Have a glance</a></div>
         </div>
       </div>
   
