--- a/experience.html
+++ b/experience.html
@@ -69,7 +69,7 @@
             <div class="desc">Languages used:<br>
               C, MySQL, PHP, HTML5 & CSS3/SCSS/Materialize CSS, JavaScript, jQuery, <br>
               MVC Frameworks (Symfony)<br>
-              Coming soon: <b>AngularJS</b> and Django/Flask.</div>
+              Frameworks/Libraries: Angular 8 & 9 + React</div>
           </div>
         </li>
       
