--- a/index.html
+++ b/index.html
@@ -55,12 +55,15 @@
         <div class="col s6">
           <div class="about-me">
           <h4>Hi there, <b>I'm Patricia</b>.</h4>
+            <p style="padding-bottom:5px;"></p>
           </div>
-          <h6>An ambitious [former] computer science student who's on the lookout for an opportunity in the <b style="color:teal;">Front-End Development</b> or <b style="color:teal;">UX Research</b> field.</h6>
-          <p>I'm known to be very well-rounded so I'm always open to a role that mixes different responsibilities, whether that be Business/Research/Development/Client Relations/Team Building, you name it.</p>
-          <h6>To me, client satisfaction is high priority and I'm determined enough to find the right technology & methods to keep them hooked!</h6>
-          <div class="row" style="margin-top:5%;">
-            <div class="col s12">
+          <h6>An ambitious former Coding Academy student who's on the lookout for an opportunity in the <b style="color:teal;">Front-End Development</b> field.</h6>
+          <p></p>
+          <p>I have a Communications background where having worked in a tech startup really helped me become autonomous yet build a strong connection to my community and team members. 
+            Thanks to my experience in the industry, I understand the importance of staying up to date with the trends.</p> To me, client satisfaction is high priority and I make a constant effort to find the right methods to keep things going in the forward direction.
+          
+          <!-- <div class="row" style="margin-top:5%;">
+            <div class="col s12"> 
               <h6>Here's my journey in a nutshell:</h6>
               <ul class="ul-icons">
                 <div class="tooltip">
@@ -87,7 +90,7 @@
                 </div>
               </ul>
             </div>
-          </div>
+          </div> -->
 
             <div class="row" style="margin-top:7%">
               <h5 style="color:black; margin-bottom:-2%;"><u>Here are some languages I've dabbled in</h5></u>
