--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                     
                     <p><u class="hello">Email</u>: pcarr.hi@gmail.com</p>
                     <p><u class="hello">Phone</u>: +33.(0)6.51.82.03.56.</p>
-                    <p><u class="hello">Location</u>: Toulouse, France <em> (..but willing to relocate)</em></p>
+                    <p><u class="hello">Location</u>: Toulouse, France</p>
                     </div>
 
                     <div class="footer-social-icons">
