--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="col s6">
         <div class="row" style="margin-top:10%;">
           <div class="col s12">
-            <img src="patty_2.jpg" alt="Avatar">
+            <img src="Patricia-4-edited.jpg" alt="Avatar">
           </div>
           <p><h6><b>Download CV ---> <a href="Patricia Carr_CV_May2020.pdf" style="color:teal; margin-left:-7%;" download>[here]</a></b></h6></p>
         </div>
