--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="col s12">
             <img src="Patricia-4-edited.jpg" alt="Avatar">
           </div>
-          <p><h6><b>Download CV ---> <a href="Patricia Carr_EN.pdf" style="color:teal; margin-left:-7%;" download>[here]</a></b></h6></p>
+          <p><h6><b>Télécharger mon CV en français ---> <a href="CV_Patricia_CARR_FR.pdf" style="color:teal; margin-left:-7%;" download>[ici]</a></b></h6></p>
         </div>
       </div>
     <!--End of row & container section-->   
