--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
       <div class="col s6">
         <div class="row" style="margin-top:10%;">
           <div class="col s12">
-            <img src="Patricia-4-edited.jpg" alt="Avatar">
+            <img src="Patricia-4-edited.jpg" id="image" alt="Avatar">
           </div>
           <p><h6><b>Télécharger mon CV en français ---> <a href="CV_Patricia_CARR_FR.pdf" style="color:teal; margin-left:-7%;" download>[ici]</a></b></h6></p>
+          <p><h6><b>Download my CV in English ---> <a href="CV_Patricia_CARR_FR.pdf" style="color:teal; margin-left:-7%;" download>[here]</a></b></h6></p>
         </div>
       </div>
     <!--End of row & container section-->   
