--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <p style="padding-bottom:5px;"></p>
           </div>
           <h6>Web Developer [in Progress], who's on the lookout for a <b style="color:teal;"> Junior Front-End Developer</b> role.</h6>
-          <p></p>
+          <p> I may not know Barack Obama personally, but we do come from the same place: Hawaii. I moved to France to improve my French and integrate in the French culture. Fast forward 5 years and I'm now trying to establish my career as a Newbie Developer while keeping up with the lifestyle.
+          </p>
           <p>I have a Communications background where having worked in a tech startup really helped me become autonomous yet build a strong connection to my community and team members. 
             Thanks to my experience in the industry, I understand the importance of staying up to date with the trends.</p> To me, client satisfaction is high priority and I make a constant effort to find the right methods to keep things going in the forward direction.
           
