--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h6>Web Developer [in Progress], who's on the lookout for a <b style="color:teal;"> Junior Front-End Developer</b> role.</h6>
           <p> I may not know Barack Obama personally, but we do come from the same place: Hawaii. I moved to France to improve my French, explore its culture, and integrate into French society. Fast forward 5 years and I'm working my way through the tech industry as a Newbie Developer while keeping up with the lifestyle à la française.
           </p>
-          <p>I have a Communications background where I had the chance to work in a fast-growing tech startup that allowed me to really become autonomous yet build a strong connection to my community and team members. 
+          <p>I have a Communications/Marketing background where I previously worked in a fast-growing tech startup that helped me become autonomous yet build a strong connection to my community and team members. 
             Thanks to my experience in the industry, I understand the importance of staying up to date with the trends.</p> To me, client satisfaction is high priority and I make a constant effort to find the right methods to keep things going in the forward direction.
           
           <!-- <div class="row" style="margin-top:5%;">
