--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           I moved to France to improve my French, explore its culture, and integrate into French society. Fast forward 5 years and I'm now an aspiring Web Developer (although I'm a newbie at that).
           </p>
           <p>I have a Communications/Marketing background where I previously worked in a fast-growing tech startup that helped me become autonomous yet build a strong connection to my community and team members. 
-            Thanks to my experience in the industry, I understand the importance of staying up to date with the trends.</p> To me, client satisfaction is high priority and I make a constant effort to find the right methods to keep things going in the forward direction.
+            Thanks to my experience in the industry, I understand the importance of staying up to date and researching trends.</p> I know it's hard to know me by a few sentences, but I always value the people on my team and make a constant effort to find the right methods to keep things going in a forward direction.
           
           <!-- <div class="row" style="margin-top:5%;">
             <div class="col s12"> 
