--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <p style="padding-bottom:5px;"></p>
           </div>
           <h6>Web Developer [in Progress], who's on the lookout for a <b style="color:teal;"> Junior Front-End Developer</b> role.</h6>
-          <p> I may not know Barack Obama personally, but we do come from the same place: Hawaii.
-          I moved to France to improve my French, explore its culture, and integrate into French society. Fast forward 5 years and I'm now an aspiring Web Developer (although I'm a newbie at that).
+          <p> I may not know Barack Obama personally, but we do come from the same place: Hawaii. <br/>
+          In 2015 I moved to France to improve my French, explore its culture, and integrate into French society. Fast forward 5 years and I'm now an aspiring Web Developer (although I'm a newbie at that).
           </p>
           <p>I have a Communications/Marketing background where I previously worked in a fast-growing tech startup that helped me become autonomous yet build a strong connection to my community and team members. 
             Thanks to my experience in the industry, I understand the importance of staying up to date and researching trends.</p> I know it's hard to know me by a few sentences, but I always value the people on my team and make a constant effort to find the right methods to keep things going in a forward direction.
