--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </div> -->
 
             <div class="row" style="margin-top:7%">
-              <h6 style="color:black; margin-bottom:-2%;"><u>Here are some languages I've dabbled in</h6></u>
+              <p style="color:black; margin-bottom:-2%;"><u>Here are some languages I've dabbled in</hp></u>
               <div class="col s6">
                 <ul class="ul-frontend">
                     <li>Python</li>
