--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <h5>My Music App</h5>
                  <p>Angular + Firebase Back End. Still Work In Progress :)
             </div>
-            <div class="card-action center-align"><a style="color:teal;" href="https://github.com/pcarrhi/MusicApp" target="_blank">Have a glance</a></div>
+            <div class="card-action center-align"><a style="color:teal;" href="https://github.com/pcarrhi/MusicApp" target="_blank">Github repo link</a></div>
         </div>
       </div>
   
