--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
           <p>I have a Communications/Marketing background where I previously worked in a fast-growing tech startup that helped me become autonomous yet build a strong connection to my community and team members. 
             Thanks to my experience in the industry, I understand the importance of staying up to date and researching trends.</p> I know it's hard to know me by a few sentences, but I make a constant effort to find the right methods to keep things going in a forward direction.
           Lastly, what is most important is that I always value the people on my team. 
+          <p></p>
+       
           <!-- <div class="row" style="margin-top:5%;">
             <div class="col s12"> 
               <h6>Here's my journey in a nutshell:</h6>
@@ -115,6 +117,8 @@
               </div>
             </div>
         </div>
+      <p></p>
+         Also one more thing: I make pretty good banana bread :)
 
       <div class="col s6">
         <div class="row" style="margin-top:10%;">
