--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </ul>
               </div>
             </div>
-       Also one more thing: I make pretty good banana bread :)
+       Also a little extra: I make pretty good banana bread :)
         </div>
         
 
