--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
           <div class="col s12">
             <img src="Patricia-4-edited.jpg" id="image" alt="Avatar">
           </div>
-          <p><h6><b>Téléchargez mon CV en français ---> <a href="CV_Patricia_CARR_FR.pdf" style="color:teal; margin-left:-7%;" download>[ici]</a></b></h6></p>
-          <p><h6><b>Download my CV in English ---> <a href="Patricia Carr_EN.pdf" style="color:teal; margin-left:-7%;" download>[here]</a></b></h6></p>
+          <p><h6><b>Mon CV en français ---> <a href="CV_Patricia_CARR_FR.pdf" style="color:teal; margin-left:-7%;" target="_blank">[ici]</a></b></h6></p>
+          <p><h6><b>My CV in English ---> <a href="Patricia Carr_EN.pdf" style="color:teal; margin-left:-7%;" target="_blank">[here]</a></b></h6></p>
         </div>
       </div>
     <!--End of row & container section-->   
