--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <div class="col s6">
         <div class="row" style="margin-top:10%;">
           <div class="col s12">
-            <img src="Patricia-5-resized.jpg" id="image" alt="Avatar">
+            <img src="Patricia-5-small.jpg" id="image" alt="Avatar">
           </div>
           <p><h6><b>Mon CV en français ---> <a href="Patricia Carr_FR.pdf" style="color:teal; margin-left:-7%;" target="_blank">[ici]</a></b></h6></p>
           <p><h6><b>My CV in English ---> <a href="Patricia Carr_EN.pdf" style="color:teal; margin-left:-7%;" target="_blank">[here]</a></b></h6></p>
