--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="card-content">
               <i class="material-icons large">play_circle_outline</i>
               <h5>Creativity Time!</h5>
-              <p>A project from my Communications career</p>
+              <p>A video about my previous company's activities. (My part involved organization and storyboard)</p>
             </div>
             <div class="card-action center-align"><a style="color:teal;" href="https://www.youtube.com/watch?v=EoNu2ZhrNiQ" target="_blank">Take a peek</a></div>
         </div>
