--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
             <p style="padding-bottom:5px;"></p>
           </div>
           <h6>A bootcamp trained Web Developer who's on the lookout for a role in<b style="color:teal;"> Web Development or Communication</b>.</h6>
-          <p> I may not know Barack Obama personally, but we do come from the same place: Hawaii. <br/>
+          But hey, I'm also able to adapt to different roles! :)
+          
+          <h7> Brief part about me..</h7>
+            <p>I may not know Barack Obama personally, but we do come from the same place: Hawaii. <br/>
           In 2015 I moved to France to get my bearings on French language and culture. Fast forward 5 years and I'm now an aspiring Web Developer.
           </p>
           <p>I have a Communications/Marketing background where I previously worked in a fast-growing tech startup that helped me become autonomous yet build a strong connection to my community and team members. 
