--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <h6>A bootcamp trained Web Developer who's on the lookout for a role in<b style="color:teal;"> Web Development or Communication</b>.</h6>
           But hey, I'm also able to adapt to different roles! :)
           
-          <h7> Brief part about me..</h7>
+          <p><h7 style="color:teal; opacity:0.8;"><strong> Brief part about me..</strong></h7><br/></p>
             <p>I may not know Barack Obama personally, but we do come from the same place: Hawaii. <br/>
           In 2015 I moved to France to get my bearings on French language and culture. Fast forward 5 years and I'm now an aspiring Web Developer.
           </p>
