--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
           <h6>A bootcamp trained Web Developer who's on the lookout for a role in<b style="color:teal;"> Web Development or Communication</b>.</h6>
           But hey, I'm also able to adapt to different roles! :)
           
+          <!--ABOUT ME BACKGROUND-->
+          <div>
           <h6 style="opacity:0.8;"><b> Brief part about me..</b></h6>
             <p>I may not know Barack Obama personally, but we do come from the same place: Hawaii. <br/>
           In 2015 I moved to France to get my bearings on French language and culture. Fast forward 5 years and I'm now an aspiring Web Developer.
@@ -68,6 +70,7 @@
             Thanks to my experience in the industry, I understand the importance of staying up to date and researching trends.</p> I know it's hard to know me by a few sentences, but I make a constant effort to find the right methods to keep things going in a forward direction.
           Lastly, what is most important is that I always value the people on my team. 
           <p></p>
+          </div>
        
           <!-- <div class="row" style="margin-top:5%;">
             <div class="col s12"> 
