--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           
           <!--ABOUT ME BACKGROUND-->
           <p>
-          <h6 style="opacity:0.8;"><b> Brief part about me..</b></h6>
+          <h6><b> Brief part about me..</b></h6>
             I may not know Barack Obama personally, but we do come from the same place: Hawaii. <br/>
           In 2015 I moved to France to get my bearings on French language and culture. Fast forward 5 years and I'm now an aspiring Web Developer.
           </p>
