--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <p style="padding-bottom:5px;"></p>
           </div>
           <h6>A bootcamp trained Web Developer who's on the lookout for a role in<b style="color:teal;"> Web Development or Communication</b>.</h6>
-          But hey, I'm also able to adapt to different roles! :)
+          But hey, I'm also able to adapt to different roles! :)<br/>
           
           <!--ABOUT ME BACKGROUND-->
           <p>
