--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <p style="padding-bottom:5px;"></p>
           </div>
           <h6>A bootcamp trained Web Developer who's on the lookout for a role in<b style="color:teal;"> Web Development or Communication</b>.</h6>
-          But hey, I'm also able to adapt to different roles! :)<br/>
+          But hey, I'm also able to adapt to different roles! :)
           
           <!--ABOUT ME BACKGROUND-->
-          <p>
+          <p><p> </p>
           <h6><b> Brief part about me..</b></h6>
             I may not know Barack Obama personally, but we do come from the same place: Hawaii. <br/>
           In 2015 I moved to France to get my bearings on French language and culture. Fast forward 5 years and I'm now an aspiring Web Developer.
