--- a/index.html
+++ b/index.html
@@ -64,11 +64,10 @@
           <p style="padding-top:5px;"></p>
           <h6><b> Brief part about me..</b></h6>
             I may not know Barack Obama personally, but we do come from the same place: Hawaii. <br/>
-          In 2015 I moved to France to get my bearings on French language and culture. Fast forward 5 years and I'm now an aspiring Web Developer.
+          In 2015 I moved to France to get my bearings on French language and culture. Fast forward 5 years and I'm now an aspiring techie.
           </p>
           <p>I have a Communications/Marketing background where I previously worked in a fast-growing tech startup that helped me become autonomous yet build a strong connection to my community and team members. 
-            Thanks to my experience in the industry, I understand the importance of staying up to date and researching trends.</p> I know it's hard to know me by a few sentences, but I make a constant effort to find the right methods to keep things going in a forward direction.
-          Lastly, what is most important is that I always value the people on my team. 
+            Thanks to my experience in the industry, I understand the importance of staying up to date and researching trends.</p> I know it's hard to know me by a few sentences, but you'll see that I make a constant effort to find the right methods to keep things going in a forward direction and I always value the people on my team. 
       </p>
           
        
