--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h4>Hi there, <b>I'm Patricia</b>.</h4>
             <p style="padding-bottom:5px;"></p>
           </div>
-          <h6>A bootcamp trained Web Developer who's on the lookout for a role in<b style="color:teal;"> Web Development or Communication</b>.</h6>
+          <h6>A bootcamp trained Web Developer and new to the Network Administration world, on the lookout for a diverse role in the tech industry.
           But hey, I'm also able to adapt to different roles! :)
           
           <!--ABOUT ME BACKGROUND-->
